@@ -57,8 +57,8 @@ sub _get_class {
   my $class = shift;
   my $number = shift;
   foreach my $prefix (_prefixes($number)) {
-    if(exists($Number::Phone::UK::Data::db->{subclass}->{$prefix})) {
-      my $subclass = join('::', $class, $Number::Phone::UK::Data::db->{subclass}->{$prefix});
+    if(exists(Number::Phone::UK::Data::db()->{subclass}->{$prefix})) {
+      my $subclass = join('::', $class, Number::Phone::UK::Data::db()->{subclass}->{$prefix});
       eval "use $subclass";
       return $subclass;
     }
@@ -107,12 +107,12 @@ sub is_valid {
     return $cache->{$number}->{is_valid} = 0 if($cleaned_number =~ /^([27]|11)/ && length($cleaned_number) != 10);
 
     $cache->{$number}->{is_allocated} = 
-        grep { $Number::Phone::UK::Data::db->{telco_and_length}->{$_} } @prefixes;
+        grep { Number::Phone::UK::Data::db()->{telco_and_length}->{$_} } @prefixes;
 
     if($cache->{$number}->{is_allocated}) {
-        my($telco_and_length) = map { $Number::Phone::UK::Data::db->{telco_and_length}->{$_} } grep { $Number::Phone::UK::Data::db->{telco_and_length}->{$_} } @prefixes;
-        $cache->{$number}->{operator} = $Number::Phone::UK::Data::db->{telco_format}->{$telco_and_length}->{telco};
-        $cache->{$number}->{format} = $Number::Phone::UK::Data::db->{telco_format}->{$telco_and_length}->{format};
+        my($telco_and_length) = map { Number::Phone::UK::Data::db()->{telco_and_length}->{$_} } grep { Number::Phone::UK::Data::db()->{telco_and_length}->{$_} } @prefixes;
+        $cache->{$number}->{operator} = Number::Phone::UK::Data::db()->{telco_format}->{$telco_and_length}->{telco};
+        $cache->{$number}->{format} = Number::Phone::UK::Data::db()->{telco_format}->{$telco_and_length}->{format};
 
         if($cache->{$number}->{format} =~ /\+/) {
             my($arealength, $subscriberlength) = split(/\+/, $cache->{$number}->{format});
@@ -123,8 +123,8 @@ sub is_valid {
             $cache->{$number}->{subscriber} = substr($cleaned_number, $arealength);
             $cache->{$number}->{areaname} = (
                 map {
-                    $Number::Phone::UK::Data::db->{areanames}->{$_}
-                } grep { $Number::Phone::UK::Data::db->{areanames}->{$_} } @prefixes
+                    Number::Phone::UK::Data::db()->{areanames}->{$_}
+                } grep { Number::Phone::UK::Data::db()->{areanames}->{$_} } @prefixes
             )[0];
             if(!grep { length($cache->{$number}->{subscriber}) == $_ } @subscriberlengths) {
                 # number wrong length!
@@ -191,7 +191,7 @@ foreach my $is (qw(
         if(!exists($cache->{${$self}}->{"is_$is"})) {
           $cache->{${$self}}->{"is_$is"} = 
             grep {
-              $Number::Phone::UK::Data::db->{
+              Number::Phone::UK::Data::db()->{
                 { geographic      => 'geo_prefices',
                   network_service => 'network_svc_prefices',
                   tollfree        => 'free_prefices',
