@@ -1,4 +1,6 @@
 2017-XX-XX      XXXXXX  Add new US and CA area codes;
+                        Re-open the UK database in children after forking
+                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/72);
                         UK data is now in a normal data file instead of a humungous binary
                           module;
                         Data updates
